# discrete_rsl_rl

./: .gitignore  README.md  evaluation_continuous.py  evaluation_multidiscrete.py  pyproject.toml  requirements  requirements.txt  training_rsl_continuous.py  training_rsl_multidiscrete.py  training_sb3_continuous.py  training_sb3_multidiscrete.py
.github/workflows/: pytest.yaml
examples/: evaluation_continuous.py  evaluation_multidiscrete.py  training_rsl_continuous.py  training_rsl_multidiscrete.py  training_sb3_continuous.py  training_sb3_multidiscrete.py
examples/legged_locomotion_continuous/: rsl_config.yaml  sb3_config.yaml
examples/legged_locomotion_continuous/agent/: deep_rl_rsl.py  deep_rl_sb3.py
examples/legged_locomotion_continuous/environment/: config.yaml  environment.py
examples/maintenance_scheduling_multidiscrete/: rsl_config.yaml  sb3_config.yaml
examples/maintenance_scheduling_multidiscrete/agent/: deep_rl_rsl.py  deep_rl_sb3.py  no_action_agent.py  random_agent.py  top_k_failure_probability_heuristic.py  top_k_risk_heuristic.py  top_k_score_heuristic.py
examples/maintenance_scheduling_multidiscrete/environment/: component_structure.json  environment.py
examples/sb3/: env_conversions.py  misc.py
rsl_rl/runners/: on_policy_runner.py
runs/: continuous_PPO.csv  multidiscrete_PPO.csv  plot.py
runs/continuous_PPO_rsl/logs/: events.out.tfevents.1755749126.andromeda.41914.0
runs/continuous_PPO_sb3/tb/PPO_1/: events.out.tfevents.1755751386.andromeda.54340.0  events.out.tfevents.1755779515.andromeda.102540.0
runs/multidiscrete_PPO_sb3/tb/PPO_1/: events.out.tfevents.1756065173.andromeda.34710.0
sb3/: env_conversions.py  misc.py
src/rsl_rl/algorithms/: distillation.py  ppo.py
src/rsl_rl/env/: vec_env.py
src/rsl_rl/modules/: actor_critic.py  actor_critic_recurrent.py  rnd.py  student_teacher.py  student_teacher_recurrent.py
src/rsl_rl/networks/: __init__.py  memory.py  mlp.py
src/rsl_rl/runners/: distillation_runner.py  on_policy_runner.py
src/rsl_rl/storage/: rollout_storage.py
src/rsl_rl/utils/: neptune_utils.py  utils.py  wandb_utils.py
tests/: test_comparison_plot.py  test_evaluation.py  test_training.py
tests/assets/: rsl_config_continuous.yaml  rsl_config_multidiscrete.yaml  sb3_config_continuous.yaml  sb3_config_multidiscrete.yaml
