[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discrete-rsl-rl"
version = "3.0.0"
keywords = ["reinforcement-learning", "isaac", "leggedrobotics", "rl-pytorch"]
maintainers = [
  { name="Clemens Schwarke", email="cschwarke@ethz.ch" },
  { name="Mayank Mittal", email="mittalma@ethz.ch" },
]
authors = [
  { name="Clemens Schwarke", email="cschwarke@ethz.ch" },
  { name="Mayank Mittal", email="mittalma@ethz.ch" },
  { name="Nikita Rudin", email="rudinn@ethz.ch" },
  { name="David Hoeller", email="holler.david78@gmail.com" },
]
description = "Fast and simple RL algorithms implemented in PyTorch"
readme = { file = "README.md", content-type = "text/markdown"}
license = { text = "BSD-3-Clause" }

requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.5.0",
    "tensordict>=0.7.0",
    "numpy>=1.16.4",
    "GitPython",
    "onnx",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "pandas>=2.3.2",
    "matplotlib>=3.10.6",
    "pyyaml>=6.0.2",
    "genesis-world>=0.3.3",
]

[project.urls]
Homepage = "https://github.com/leggedrobotics/rsl_rl"
Issues = "https://github.com/leggedrobotics/rsl_rl/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
discrete_rsl_rl = ["py.typed", "data/*"]

[tool.pyright]
include = ["src", "examples", "tests", "docs"]
typeCheckingMode = "strict"
reportUnusedVariable = "error"
reportMissingImports = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedFunctionCall = "error"
reportMissingTypeStubs = "none"

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src", "examples", "tests"]#, "docs"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "D", "E", "F", "UP", "I", "B", "N", "S", "A", "C4", "T20"
]
ignore = ["E501", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["D104", "D107"]  # ignore module and __init__ docstrings

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250827",
    "types-pyyaml>=6.0.12.20250915",
]
