[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsl-rl"
version = "3.0.0"
keywords = ["reinforcement-learning", "isaac", "leggedrobotics", "rl-pytorch"]
maintainers = [
  { name="Clemens Schwarke", email="cschwarke@ethz.ch" },
  { name="Mayank Mittal", email="mittalma@ethz.ch" },
]
authors = [
  { name="Clemens Schwarke", email="cschwarke@ethz.ch" },
  { name="Mayank Mittal", email="mittalma@ethz.ch" },
  { name="Nikita Rudin", email="rudinn@ethz.ch" },
  { name="David Hoeller", email="holler.david78@gmail.com" },
]
description = "Fast and simple RL algorithms implemented in PyTorch"
readme = { file = "README.md", content-type = "text/markdown"}
license = { text = "BSD-3-Clause" }

requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.6.0",
    #"torchvision>=0.5.0",
    "tensordict>=0.7.0",
    #"numpy>=1.16.4",
    #"GitPython",
    #"onnx",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    #"pandas>=2.3.2",
    #"matplotlib>=3.10.6",
    "pyyaml>=6.0.2",
    "genesis-world>=0.3.3",
    "wandb>=0.23.1",
    "neptune>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/leggedrobotics/rsl_rl"
Issues = "https://github.com/leggedrobotics/rsl_rl/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
discrete_rsl_rl = ["py.typed", "data/*"]

[tool.pyright]
include = ["src", "examples", "tests", "docs"]
typeCheckingMode = "strict"
reportUnusedVariable = "error"
reportMissingImports = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportUntypedFunctionDecorator = "error"
reportMissingTypeStubs = "error"
extraPaths = ["stubs"]
exclude = []

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = []

[tool.ruff.lint]
select = [
  "E", "F", "UP", "I", "B", "N", "S", "A", "C4", "T20"
]
ignore = ["E501", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["D104", "D107"]  # ignore module and __init__ docstrings
"tests/**" = ["S101"]  # allow asserts in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.coverage.run]
source = ["src"]
omit = []

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250827",
    "types-pyyaml>=6.0.12.20250915",
]
